Fixed brand image being too big on mobile

--- a/css/custom.less
+++ b/css/custom.less
@@ -32,7 +32,8 @@ body {
 }
 
 .brand-image {
-	max-width: 350px;
+	width: 350px;
+	max-width: 100%;
 }
 
 .brand-text {
